Fix screen-width bug for desktop down
The width of these elements was ~105% of total screen width, adding horizontal scrollbars and whitespace on the left hand side

--- a/app/assets/stylesheets/darkswarm/shop.scss
+++ b/app/assets/stylesheets/darkswarm/shop.scss
@@ -16,6 +16,16 @@
       padding-right: 0;
       padding-left: 0;
     }
+
+    .row.full {
+      width: 100%;
+      margin: 0;
+
+      .columns.full {
+        padding-right: 0;
+        padding-left: 0;
+      }
+    }
   }
 
   products {
